--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
         "MIT"
     ],
     "require" : {
+        "php": ">=5.3.2",
+        "symfony/symfony": "2.*",
         "twig/extensions": "~1.0"
     },
     "autoload" : {
